tests/models/struct/unnamed/u128/fail/le.rs
use dade::model;
#[model]
struct TestModel (
   #[field(le = 2.0)]
    u128
);
fn main() {}
